# cs-chatbot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mise.toml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
fastapi_app/: main.py  rag_handler.py  scraper.py
web_app/: biome.json  next.config.ts  package.json  pm2.config.cjs  pnpm-lock.yaml
web_app/src/app/: layout.tsx  page.tsx
